--- a/static/css/blocks/workspace.css
+++ b/static/css/blocks/workspace.css
@@ -18,10 +18,13 @@
 }
 
 .workspace__history {
+    padding: 30px 8px 30px 0;
+}
+
+.workspace__history-wrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 30px 8px 30px 0;
 }
 
 .workspace__date {
